--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.0",
+    "next-pwa": "^5.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
