--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-jwt": "^1.1.4",
     "react-router-dom": "^6.2.2",
     "swiper": "^8.0.7"
   },
