--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,32 +1,32 @@
 {
-    "theme_color": "#3594f6",
-    "background_color": "#1d66b1",
-    "display": "fullscreen",
-    "scope": "/",
-    "start_url": "/",
-    "name": "KTBBD APP",
-    "description": "Aplikasi KTBBD",
-    "short_name": "KTBBD",
-    "icons": [
-        {
-            "src": "/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-256x256.png",
-            "sizes": "256x256",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-384x384.png",
-            "sizes": "384x384",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "theme_color": "#3594f6",
+  "background_color": "#1d66b1",
+  "display": "fullscreen",
+  "scope": "/",
+  "start_url": "/",
+  "name": "KTBBD APP",
+  "description": "Aplikasi KTBBD",
+  "short_name": "KTBBD",
+  "icons": [
+    {
+      "src": "/Logo_BBD.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/Logo_BBD-256x256.svg",
+      "sizes": "256x256",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
