--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
   "short_name": "KTBBD",
   "icons": [
     {
-      "src": "/Logo_BBD.svg",
+      "src": "/Logo_BBD-150x150.svg",
       "sizes": "192x192",
       "type": "image/svg+xml"
     },
