--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,23 +9,23 @@
   "short_name": "KTBBD",
   "icons": [
     {
-      "src": "/LOGO-100X100.svg",
-      "sizes": "100X100",
+      "src": "/Logo_BBD.svg",
+      "sizes": "192x192",
       "type": "image/svg+xml"
     },
     {
-      "src": "/LOGO-100X100.svg",
-      "sizes": "100X100",
+      "src": "/Logo_BBD-256x256.svg",
+      "sizes": "256x256",
       "type": "image/svg+xml"
     },
     {
-      "src": "/LOGO-100X100.svg",
-      "sizes": "100X100",
+      "src": "/Logo_BBD-384x384.svg",
+      "sizes": "384x384",
       "type": "image/svg+xml"
     },
     {
-      "src": "/LOGO-100X100.svg",
-      "sizes": "100X100",
+      "src": "/Logo_BBD-512x512.svg",
+      "sizes": "512x512",
       "type": "image/svg+xml"
     }
   ]
