--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "theme_color": "#3594f6",
-  "background_color": "#1d66b1",
+  "theme_color": "#2D31FA",
+  "background_color": "#2D31FA",
   "display": "fullscreen",
-  "scope": "",
-  "start_url": "",
+  "scope": "/",
+  "start_url": "/",
   "name": "KTBBD APP",
   "description": "Aplikasi KTBBD",
   "short_name": "KTBBD",
