--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,22 +9,42 @@
   "short_name": "KTBBD",
   "icons": [
     {
-      "src": "/Logo_BBD.svg",
+      "src": "/logoBBD-50x39.svg",
+      "sizes": "50x50",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/logoBBD-50x39.svg",
+      "sizes": "96x92",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/logoBBD-50x39.svg",
+      "sizes": "128x128",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/logoBBD-50x39.svg",
+      "sizes": "144x144",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/logoBBD-50x39.svg",
+      "sizes": "152x152",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/logoBBD-50x39.svg",
       "sizes": "192x192",
       "type": "image/svg+xml"
     },
     {
-      "src": "/Logo_BBD-256x256.svg",
-      "sizes": "256x256",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/Logo_BBD-384x384.svg",
+      "src": "/logoBBD-50x39.svg",
       "sizes": "384x384",
       "type": "image/svg+xml"
     },
     {
-      "src": "/Logo_BBD-512x512.svg",
+      "src": "/logoBBD-50x39.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
     }
