--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,50 +1,30 @@
 {
-  "theme_color": "#2D31FA",
-  "background_color": "#2D31FA",
+  "theme_color": "#3594f6",
+  "background_color": "#1d66b1",
   "display": "fullscreen",
-  "scope": "/",
-  "start_url": "/",
+  "scope": "",
+  "start_url": "",
   "name": "KTBBD APP",
   "description": "Aplikasi KTBBD",
   "short_name": "KTBBD",
   "icons": [
     {
-      "src": "/logoBBD-50x39.svg",
-      "sizes": "50x50",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/logoBBD-50x39.svg",
-      "sizes": "96x92",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/logoBBD-50x39.svg",
-      "sizes": "128x128",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/logoBBD-50x39.svg",
-      "sizes": "144x144",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/logoBBD-50x39.svg",
-      "sizes": "152x152",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/logoBBD-50x39.svg",
+      "src": "/Logo_BBD.svg",
       "sizes": "192x192",
       "type": "image/svg+xml"
     },
     {
-      "src": "/logoBBD-50x39.svg",
+      "src": "/Logo_BBD-256x256.svg",
+      "sizes": "256x256",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/Logo_BBD-384x384.svg",
       "sizes": "384x384",
       "type": "image/svg+xml"
     },
     {
-      "src": "/logoBBD-50x39.svg",
+      "src": "/Logo_BBD-512x512.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
     }
