--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,8 @@
   "theme_color": "#3594f6",
   "background_color": "#1d66b1",
   "display": "fullscreen",
-  "scope": "",
-  "start_url": "",
+  "scope": "/",
+  "start_url": "/",
   "name": "KTBBD APP",
   "description": "Aplikasi KTBBD",
   "short_name": "KTBBD",
