--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.19.2",
     "axios": "^0.26.1",
     "jsonwebtoken": "^8.5.1",
+    "lottie-web": "^5.9.1",
     "next": "12.1.0",
     "next-pwa": "^5.4.6",
     "react": "17.0.2",
